--- a/trunk/diamandas/wiki/templates/wiki/diff.html
+++ b/trunk/diamandas/wiki/templates/wiki/diff.html
@@ -1,10 +1,9 @@
 {% load i18n %}
+{% load cbc %}
 {% extends "wiki/body.html" %}
 {% block leftmenu %} <a href="/wiki/edit/{{ slug }}/">{% trans "Edit" %}</a> | <a href="/wiki/history/{{ slug }}/">{% trans "Page History" %}</a> | <a href="/wiki/add/">{% trans "Add a Page" %}</a>{% endblock %}
 
 
 {% block content %}
-	{% for line in diffresult %}
-		{{ line }}
-	{% endfor %}
+{{ diffresult|cbc }}
 {% endblock %}
