--- a/trunk/diamandas/wiki/templates/wiki/com_task_add.html
+++ b/trunk/diamandas/wiki/templates/wiki/com_task_add.html
@@ -3,12 +3,19 @@
 
 
 {% block content %}
-
-<div class="actiontitle">{% trans "Add a Task Comment" %}</div><br />
-
+{% trans "Add a comment to this task" %}
+</div><br />
+<div class="blocktable">
+	<h2><span>{% trans "Add Task Comment" %}</span></h2>
+	<div class="box">
+		<div class="inbox" style="padding:5px;">
 <form method="post" action=".">
 <textarea name="text" rows="10" cols="70"></textarea>
-<center><input type="submit" value="{% trans "Add Comment" %}" style="actiontable" /></center>
+<br /><br /><div style="text-align:center;"><input type="submit" value="{% trans "Add Comment" %}" style="actiontable" /></div>
 </form>
-<b>{% trans "Allowed HTML Tags" %}</b>: b, a, i, br, p, u, pre, div, span, img, li, ul, ol, center, sub, sup, blockquote
+<br />
+</div></div></div><br />
+
+<div class="box"><br />
+<b>{% trans "Allowed HTML Tags" %}</b>: b, a, i, br, p, u, pre, div, span, img, li, ul, ol, center, sub, sup, blockquote<br />
 {% endblock %}
