--- a/trunk/diamandas/wiki/templates/wiki/task_list.html
+++ b/trunk/diamandas/wiki/templates/wiki/task_list.html
@@ -1,39 +1,59 @@
 {% load i18n %}
 {% extends "wiki/body.html" %}
 {% block content %}
-{% if object_list %}
-<h2 class="pageh">{% trans "Site Tasks" %}</h2><br />
-<table width="100%" class="historytable" cellspacing="0" cellpadding="0">
-	<thead><tr>
-		<th class="title"><div style="text-align:center;"><b>{% trans "Task Title" %}</b></div></th>
-		<th class="title" width="150"><div style="text-align:center;"><b>{% trans "Task Status" %}</b></div></th>
-		<th class="title" width="100"><div style="text-align:center;"><b>{% trans "Task Priority" %}</b></div></th>
-		<th width="100" class="title"><div style="text-align:center;"><b>{% trans "Last Update" %}</b></div></th>
-		<th width="100" class="title"><div style="text-align:center;"><b>{% trans "Progress" %}</b></div></th>
-	</tr></thead>
+{% trans "This Page lists all tasks and edit proposals. You can post comments and help solving issues." %}<br /></div><br />
 
+{% if object_list %}
+<div class="blocktable">
+	<h2><span>{% trans "Site Tasks" %}</span></h2>
+	<div class="box">
+		<div class="inbox">
+			<table cellspacing="0">
+			<thead>
+				<tr>
+					<th class="tcl" scope="col">{% trans "Task Title" %}</th>
+					<th class="tc2" scope="col">{% trans "Task Status" %}</th>
+					<th class="tc3" scope="col">{% trans "Task Priority" %}</th>
+					<th class="tc3" scope="col">{% trans "Last Update" %}</th>
+					<th class="tc3" scope="col">{% trans "Progress" %}</th>
+				</tr>
+			</thead>
+			<tbody>
 
 {% for t in object_list %}
-{% ifequal t.task_priority "Critical" %}
-<tr style="background-color:#FFA9A9;">
-{% endifequal %}
-{% ifequal t.task_priority "High" %}
-<tr style="background-color:#FFEEA0;">
-{% endifequal %}
-{% ifequal t.task_priority "Moderate" %}
-<tr style="background-color:#C3FFB3;">
-{% endifequal %}
-{% ifequal t.task_priority "Minor" %}
-<tr style="background-color:#BFBCFF;">
-{% endifequal %}
-<td><div style="text-align:center; font-weight:bold;"><a href="/wiki/task_show/{{ t.id }}/">{{ t.task_name }}</a></div></td>
-<td><div style="text-align:center;">{{ t.task_status }}</div></td>
-<td><div style="text-align:center;">{% trans t.task_priority %}</div></td>
-<td><div style="text-align:center;">{{ t.task_modification_date }}</div></td>
-<td><div style="text-align:center;">{{ t.task_progress }}%</div></td>
-</tr>
+			<tr>
+				<td class="tcl">
+					<div class="intd">
+						<div class="tclcon">
+							<h3><a href="/wiki/task_show/{{ t.id }}/">{{ t.task_name }}</a></h3>
+						</div>
+					</div>
+				</td>
+				<td class="tc3">{{ t.task_status }}</td>
+				{% ifequal t.task_priority "Critical" %}
+				<td class="tc2" style="background-color:#FFA9A9;">
+				{% endifequal %}
+				{% ifequal t.task_priority "High" %}
+				<td class="tc2" style="background-color:#FFEEA0;">
+				{% endifequal %}
+				{% ifequal t.task_priority "Moderate" %}
+				<td class="tc2" style="background-color:#C3FFB3;">
+				{% endifequal %}
+				{% ifequal t.task_priority "Minor" %}
+				<td class="tc2" style="background-color:#BFBCFF;">
+				{% endifequal %}
+				{% trans t.task_priority %}	</td>
+				<td class="tc3">{{ t.task_modification_date|truncatewords:"1" }}</td>
+				<td class="tc3">{{ t.task_progress }}%</td>
+			</tr>
+
 {% endfor %}
-</table>
+</tbody>
+				</table>
+			</div>
+		</div>
+	</div><br />
+<div class="box"><br />
 {% if has_previous %}
 <a href="/wiki/task_list/{{ previous }}/"><b>{% trans "Previous Page" %}</b></a>
 {% endif %}
@@ -43,30 +63,49 @@
 {% endif %}
 
 {% if add_task %}
-<br /><div style="text-align:center; font-weight:bold;"><a href="/admin/wiki/task/add/">{% trans "Add new Task" %}</a></div>
+<div style="text-align:center; font-weight:bold;"><a href="/admin/wiki/task/add/">{% trans "Add new Task" %}</a></div>
 {% endif %}
+</div><br />
 
 {% if proposals %}
-	<br /><br /><br />
-	<h2 class="pageh">{% trans "Edit Proposals" %}</h2>
-	<br />
-	<table width="100%" class="historytable" cellspacing="0" cellpadding="0">
-	<thead><tr>
-		<th class="title"><div style="text-align:center;"><b>{% trans "Page Title" %}</b></div></th>
-		<th class="title" width="100"><div style="text-align:center;"><b>{% trans "Modified by" %}</b></div></th>
-		<th width="100" class="title"><div style="text-align:center;"><b>{% trans "Date" %}</b></div></th>
-		<th width="200" class="title"><div style="text-align:center;"><b>{% trans "Changes Summary" %}</b></div></th>
-	</tr></thead>
+	<br /><br />
+
+<div class="blocktable">
+	<h2><span>{% trans "Edit Proposals" %}</span></h2>
+	<div class="box">
+		<div class="inbox">
+			<table cellspacing="0">
+			<thead>
+				<tr>
+					<th class="tcl" scope="col">{% trans "Page Title" %}</th>
+					<th class="tc2" scope="col">{% trans "Modified by" %}</th>
+					<th class="tc3" scope="col">{% trans "Date" %}</th>
+					<th class="tc3" scope="col">{% trans "Changes Summary" %}</th>
+				</tr>
+			</thead>
+			<tbody>
+
+	
 	{% for page in proposals %}
-	<tr>
-		<td><div style="text-align:center;"><a href="/wiki/history/{{ page.slug }}/">{{page.title}}</a></div></td>
-		<td><div style="text-align:center;">{{ page.modification_user }}</div></td>
-		<td><div style="text-align:center;">{{ page.modification_date }}</div></td>
-		<td><div style="text-align:center;">{{ page.changes }}</div></td>
-	</tr>
+			<tr>
+				<td class="tcl">
+					<div class="intd">
+						<div class="tclcon">
+							<h3><a href="/wiki/history/{{ page.slug }}/">{{page.title}}</a></h3>
+						</div>
+					</div>
+				</td>
+				<td class="tc3"><a href="/user/show_profile/{{ page.modification_user }}/">{{ page.modification_user }}</a></td>
+				<td class="tc2">{{ page.modification_date }}</td>
+				<td class="tc3">{{ page.changes }}</td>
+			</tr>
 	{% endfor %}
-	</table>
+	</tbody>
+				</table>
+			</div>
+		</div>
+	</div><div class="box">
 {% else %}
-<h3 class="pageh">{% trans "No tasks" %}</h3>
+<div class="box">{% trans "No proposals" %}
 {% endif %}
 {% endblock %}
