--- a/trunk/diamandas/wiki/templates/wiki/task_show.html
+++ b/trunk/diamandas/wiki/templates/wiki/task_show.html
@@ -5,37 +5,123 @@
 {{ task.task_name }}
 {% endblock %}
 {% block content %}
-<h2 class="pageh">{% trans "Task Description" %}</h2>
+{% trans "This page describes a site task. You can post comments regarding it." %}<br /></div><br />
+
+<div class="blocktable">
+	<h2><span>{% trans "Task Description" %}</span></h2>
+	<div class="box">
+		<div class="inbox" style="padding:5px;">
 {{ task.task_text }}
 <br />
-<div style="text-align:center;"><b>{% trans "Task Type" %}</b>: {{ task.task_type }} | <b>{% trans "Task Status" %}</b>: {{ task.task_status }} | <b>{% trans "Assigned To" %}</b>: {{ user_list }}<br />
-<b>{% trans "Creation Date" %}</b>: {{ task.task_creation_date }} | <b>{% trans "Last Modification Date" %}</b>: {{ task.task_modification_date }}<br />
-{% if add_task %}
-<a href="/admin/wiki/task/add/">{% trans "Add new Task" %}</a> | <a href="/admin/wiki/task/{{ task.id }}/">{% trans "Edit Task" %}</a><br />
-{% endif %}
+</div></div></div>
 
-{% ifnotequal task.task_progress "0" %}
-<br /><div style="width:{{ task.task_progress }}%; color:white; background:#2489DB; padding:3px;">{% trans "Progress" %}: {{ task.task_progress }}%</div>
-{% endifnotequal %}
-</div>
 <br />
-{% if com %}
-<h2 class="pageh">{% trans "Task Comments" %}</h2><br />
-<table width="100%" class="historytable" cellspacing="0" cellpadding="0">
-	<thead><tr>
-		<th class="title" width="100"><div style="text-align:center;"><b>{% trans "Author" %}</b></div></th>
-		<th class="title"><div style="text-align:center;"><b>{% trans "Text" %}</b></div></th>
-		<th width="200" class="title"><div style="text-align:center;"><b>{% trans "Date" %}</b></div></th>
-	</tr></thead>
-{% for c in com %}
-<tr>
-<td><div style="text-align:center;">{{ c.com_author }}</div></td>
-<td>{{ c.com_text }}</td>
-<td><div style="text-align:center;">{{ c.com_date }}<br />{{ c.com_ip }}</div></td>
-</tr>
-{% endfor %}
-</table>
-{% endif %}
-<div style="text-align:center;"><input type="button" value="{% trans "Add Comment" %}" onclick="location.assign('/wiki/task_com_add/{{ task.id }}/');" /></div>
 
+<div class="blocktable">
+	<h2><span>{% trans "Task Info" %}</span></h2>
+	<div class="box">
+		<div class="inbox">
+			<table cellspacing="0">
+			<tbody>
+
+			<tr>
+				<td class="tc2">
+					<div class="intd">
+						<div class="tclcon">
+							<h3>{% trans "Task Type" %}</h3>
+						</div>
+					</div>
+				</td>
+				<td class="tc3">{{ task.task_type }}</td>
+			</tr>
+			<tr>
+				<td class="tc2">
+					<div class="intd">
+						<div class="tclcon">
+							<h3>{% trans "Task Status" %}</h3>
+						</div>
+					</div>
+				</td>
+				<td class="tc3">{{ task.task_status }}</td>
+			</tr>
+			<tr>
+				<td class="tc2">
+					<div class="intd">
+						<div class="tclcon">
+							<h3>{% trans "Assigned To" %}</h3>
+						</div>
+					</div>
+				</td>
+				<td class="tc3">{{ user_list }}</td>
+			</tr>
+			<tr>
+				<td class="tc2">
+					<div class="intd">
+						<div class="tclcon">
+							<h3>{% trans "Creation Date" %}</h3>
+						</div>
+					</div>
+				</td>
+				<td class="tc3">{{ task.task_creation_date }}</td>
+			</tr>
+			<tr>
+				<td class="tc2">
+					<div class="intd">
+						<div class="tclcon">
+							<h3>{% trans "Last Modification Date" %}</h3>
+						</div>
+					</div>
+				</td>
+				<td class="tc3">{{ task.task_modification_date }}</td>
+			</tr>
+			<tr>
+				<td class="tc2">
+					<div class="intd">
+						<div class="tclcon">
+							<h3>{% trans "Task Progress" %}</h3>
+						</div>
+					</div>
+				</td>
+				<td class="tc3">{{ task.task_progress }}%</td>
+			</tr>
+</tbody>
+				</table>
+			</div>
+		</div>
+	</div><br />
+
+{% if add_task %}
+<div class="box"><br /><div style="text-align:center;font-weight:bold;"><a href="/admin/wiki/task/add/">{% trans "Add new Task" %}</a> | <a href="/admin/wiki/task/{{ task.id }}/">{% trans "Edit Task" %}</a></div><br /></div><br />
+{% endif %}
+
+
+{% if com %}
+<div class="blocktable">
+	<h2><span>{% trans "Task Comments" %}</span></h2>
+	<div class="box">
+		<div class="inbox">
+			<table cellspacing="0">
+			<tbody>
+{% for c in com %}
+			<tr>
+				<td class="tcl">
+					<div class="intd">
+						<div class="tclcon">
+							{{ c.com_text }} (<b><a href="/user/show_profile/{{ c.com_author }}/">{{ c.com_author }}</a></b>)
+						</div>
+					</div>
+				</td>
+				<td class="tc3">{{ c.com_date|truncatewords:"1" }}<br />{{ c.com_ip }}</td>
+			</tr>
+{% endfor %}
+				</tbody>
+				</table>
+			</div>
+		</div>
+	</div><br />
+
+{% endif %}
+<div class="box"><br />
+<div style="text-align:center;"><input type="button" value="{% trans "Add Comment" %}" onclick="location.assign('/wiki/task_com_add/{{ task.id }}/');" /></div>
+<br />
 {% endblock %}
