more fixes, added news and stats apps

--- a/trunk/diamandas/myghtyboard/templates/myghtyboard/punbb/topics_list.html
+++ b/trunk/diamandas/myghtyboard/templates/myghtyboard/punbb/topics_list.html
@@ -1,5 +1,8 @@
 {% load i18n %}
 {% extends "myghtyboard/punbb/body.html" %}
+
+{% block title %}{% trans "Topics from" %} {{ forum_name }}{% endblock %}
+
 {% block content %}
 <div class="box"><a href="/forum/add_topic/{{ forum }}/"><b>{% trans "Add New Topic" %}</b></a></div><br />
 <div class="blocktable">
