--- a/trunk/diamandas/myghtyboard/templates/myghtyboard/punbb/body.html
+++ b/trunk/diamandas/myghtyboard/templates/myghtyboard/punbb/body.html
@@ -3,7 +3,7 @@
 <html dir="ltr">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>MyghtyBoard</title>
+<title>{% block title %}{{ site_name }}{% endblock %}</title>
 <link rel="stylesheet" type="text/css" href="/site_media/themes/{{ perms.engine }}/{{ perms.theme }}/{{ perms.theme }}.css" />
 </head>
 <body>
@@ -11,7 +11,7 @@
 <div id="punwrap">
 <div id="punindex" class="pun">
 <h2><b>{% trans "Quick Links" %}</b>:
-<a href="/" style="text-decoration:underline;">{% trans "Main Page" %}</a> | <a href="/forum/" style="text-decoration:underline;">{% trans "Forum" %}</a>  | <a href="/user/" style="text-decoration:underline;">{% trans "My Profile" %}</a>
+<a href="/" style="text-decoration:underline;">{% trans "Main Page" %}</a> | <a href="/forum/" style="text-decoration:underline;">{% trans "Forum" %}</a>  | <a href="/news/" style="text-decoration:underline;">{% trans "News" %}</a> | <a href="/user/" style="text-decoration:underline;">{% trans "My Profile" %}</a>
 </h2>
 
 
