--- a/trunk/diamandas/myghtyboard/templates/myghtyboard/punbb/post_list.html
+++ b/trunk/diamandas/myghtyboard/templates/myghtyboard/punbb/post_list.html
@@ -1,6 +1,7 @@
 {% load i18n %}
 {% load fbc %}
 {% extends "myghtyboard/punbb/body.html" %}
+{% block title %}{% trans "Posts from" %} {{ forum_name }}/{{ topic }}{% endblock %}
 {% block content %}
 
 <div class="box"><div class="linkst">
