--- a/trunk/diamandas/tasks/templates/tasks/punbb/task_show.html
+++ b/trunk/diamandas/tasks/templates/tasks/punbb/task_show.html
@@ -91,7 +91,7 @@
 	</div><br />
 
 {% if add_task %}
-<div class="box"><br /><div style="text-align:center;font-weight:bold;"><a href="/admin/wiki/task/add/">{% trans "Add new Task" %}</a> | <a href="/admin/wiki/task/{{ task.id }}/">{% trans "Edit Task" %}</a></div><br /></div><br />
+<div class="box"><br /><div style="text-align:center;font-weight:bold;"><a href="/tasks/task_add/">{% trans "Add new Task" %}</a> | <a href="/admin/tasks/task/{{ task.id }}/">{% trans "Edit Task" %}</a></div><br /></div><br />
 {% endif %}
 
 
@@ -122,6 +122,6 @@
 
 {% endif %}
 <div class="box"><br />
-<div style="text-align:center;"><input type="button" value="{% trans "Add Comment" %}" onclick="location.assign('/wiki/task_com_add/{{ task.id }}/');" /></div>
+<div style="text-align:center;"><input type="button" value="{% trans "Add Comment" %}" onclick="location.assign('/tasks/task_com_add/{{ task.id }}/');" /></div>
 <br />
 {% endblock %}
