--- a/trunk/media/themes/punbb/GreenPun/GreenPun.css
+++ b/trunk/media/themes/punbb/GreenPun/GreenPun.css
@@ -258,7 +258,7 @@ TD DIV.tclcon {MARGIN-LEFT: 2.3em}
 #brdmenu {height:20px;padding-top:1px;padding-left:2px}
 body{text-align:center;background-color: #F0F0F0;}
 #punwrap {
-	width: 800px;
+	width: 98%;
 	margin-left: auto;
 	margin-right: auto;
 	text-align: left;
