--- a/trunk/media/themes/punbb/CrystalClear/CrystalClear.css
+++ b/trunk/media/themes/punbb/CrystalClear/CrystalClear.css
@@ -254,7 +254,7 @@ TD DIV.tclcon {MARGIN-LEFT: 2.3em}
 #brdmenu {height:17px;padding-top:3px;padding-left:6px}
 body{text-align:center;background: url(bg000000.gif);}
 #punwrap {
-	width: 802px;
+	width: 98%px;
 	margin-left: auto;
 	margin-right: auto;
 	padding: 10px;
