--- a/trunk/diamandas/wiki/templates/404.html
+++ b/trunk/diamandas/wiki/templates/404.html
@@ -1,1 +1,10 @@
-<h1>Ups, Error!</h1>
+{% load i18n %}
+<h1>404 - Page Not Found!</h1>
+<h2>The page you have requested does not exist. <a href="/">Check the main page for changes</a></h2>
+
+<br /><br /><br />
+
+
+<h1>{% trans "404 - Page Not Found!" %}</h1>
+<h2>{% trans "The page you have requested does not exist. <a href="/">Check the main page for changes</a>" %}</h2>
+
