--- a/trunk/diamandas/wiki/templates/500.html
+++ b/trunk/diamandas/wiki/templates/500.html
@@ -1,1 +1,9 @@
-<h1>Ups, Error!</h1>
+{% load i18n %}
+<h1>500 - Server Error!</h1>
+<h2>A Bug have ocurred in django application. Site Admin have been emailed with full bug informations</h2>
+
+<br /><br /><br />
+
+
+<h1>{% trans "500 - Server Error!" %}</h1>
+<h2>{% trans "A Bug have ocurred in django application. Site Admin have been emailed with full bug informations" %}</h2>
