--- a/trunk/diamandas/wiki/templates/wiki/punbb/page.html
+++ b/trunk/diamandas/wiki/templates/wiki/punbb/page.html
@@ -2,7 +2,7 @@
 {% load cbc %}
 {% extends "wiki/punbb/body.html" %}
 {% block leftmenu %}
- <a href="/wiki/edit/{{ page.slug }}/">{% trans "Edit" %}</a> | <li><a href="/wiki/history/{{ page.slug }}/">{% trans "Page History" %}</a> | <a href="/wiki/add/">{% trans "Add a Page" %}</a>
+ <a href="/wiki/edit/{{ page.slug }}/">{% trans "Edit" %}</a> | <a href="/wiki/history/{{ page.slug }}/">{% trans "Page History" %}</a> | <a href="/wiki/add/">{% trans "Add a Page" %}</a>
 {% if pdf %}
  | <a href="/wiki/pdf/{{ page.slug }}/">{% trans "Save as PDF" %}</a>
 {% endif %}
