--- a/trunk/diamandas/myghtyboard/templates/myghtyboard/punbb/body.html
+++ b/trunk/diamandas/myghtyboard/templates/myghtyboard/punbb/body.html
@@ -10,9 +10,22 @@
 
 <div id="punwrap">
 <div id="punindex" class="pun">
-<h2><b>{% trans "Quick Links" %}</b>:
-<a href="/" style="text-decoration:underline;">{% trans "Main Page" %}</a> | <a href="/forum/" style="text-decoration:underline;">{% trans "Forum" %}</a>  | <a href="/news/" style="text-decoration:underline;">{% trans "News" %}</a> | <a href="/user/" style="text-decoration:underline;">{% trans "My Profile" %}</a>
-</h2>
+
+<div id="brdheader" class="block">
+	<div class="box">
+		<div id="brdmenu" class="inbox">
+			<a href="/" style="text-decoration:underline;">{% trans "Main Page" %}</a>  | <a href="/news/" style="text-decoration:underline;">{% trans "News" %}</a> | <a href="/user/" style="text-decoration:underline;">{% trans "My Profile" %}</a> | <a href="/forum/" style="text-decoration:underline;">{% trans "Forum" %}</a>
+		</div>
+		<div id="brdtitle" class="inbox">
+			<h1><span>{% block header %}Diamanda Wiki{% endblock %}</span></h1>
+		</div>
+		<div id="brdmenu" class="inbox">
+{% block leftmenu %}{% if perms.is_authenticated %}
+<a href="/forum/lasttopics/">{% trans "Last Active Topics" %}</a> | <a href="/forum/mytopics/">{% trans "My Topics" %}</a> | <a href="/forum/myptopics/">{% trans "My Posts" %}</a>
+{% endif %}{% endblock %}
+		</div>
+	</div>
+</div>
 
 
 {% block content %}{% endblock %}
