--- a/trunk/diamandas/wiki/templates/wiki/punbb/oldPage.html
+++ b/trunk/diamandas/wiki/templates/wiki/punbb/oldPage.html
@@ -9,8 +9,17 @@
  | <a onclick="window.print();">{% trans "Print Page" %}</a>
 {% endblock %}
 
+{% block descript %}
+{% if page.description %}
+{{ page.description }}
+{% endif %}
+{% endblock %}
+
+{% block header %}
+{{ page.title }}
+{% endblock %}
+
 {% block content %}
-{{ page.title }} - {{ page.description }}
 {{ page.text|cbc }}
 <hr />
 <center><b>{% trans "Page Added" %}:</b> {{ page.creation_date }} | <b>{% trans "Page Last Modification" %}</b>: {{ page.creation_date }} | <b>{% trans "Changes" %}</b>: {{ page.changes }}</center>
