--- a/trunk/diamandas/myghtyboard/templates/myghtyboard/punbb/category_list.html
+++ b/trunk/diamandas/myghtyboard/templates/myghtyboard/punbb/category_list.html
@@ -27,7 +27,7 @@
 				<td class="tcl">
 					<div class="intd">
 						{% if forum.is_redirect %}
-							<div style="float:left;"><img src="/site_media/myghtyboard/stick.png" alt="" /></div>
+							<div style="float:left;"><img src="/site_media/themes/{{ perms.engine }}/{{ perms.theme }}/stick.png" alt="" /></div>
 						{% else %}
 							<div class="icon"><div class="nosize"><!-- --></div></div>
 						{% endif %}
