minor bug fixes

--- a/trunk/diamandas/userpanel/templates/userpanel/punbb/panel.html
+++ b/trunk/diamandas/userpanel/templates/userpanel/punbb/panel.html
@@ -1,7 +1,6 @@
 {% load i18n %}
-{% load fbc %}
-{% extends "myghtyboard/punbb/body.html" %}
-{% block content %}
+{% extends "wiki/punbb/body.html" %}
+{% block content %}</div>
 <br />
 <h2><span>{% trans "User Profile" %}</span></h2>
 <div class="blocktable">
