--- a/trunk/diamandas/userpanel/templates/userpanel/punbb/pmessage.html
+++ b/trunk/diamandas/userpanel/templates/userpanel/punbb/pmessage.html
@@ -1,6 +1,6 @@
 {% load i18n %}
-{% extends "myghtyboard/punbb/body.html" %}
-{% block content %}
+{% extends "wiki/punbb/body.html" %}
+{% block content %}</div>
 <br />
 <h2><span>{% trans "Send a Private Message" %}</span></h2>
 
