--- a/trunk/diamandas/userpanel/templates/userpanel/punbb/show_profile.html
+++ b/trunk/diamandas/userpanel/templates/userpanel/punbb/show_profile.html
@@ -1,9 +1,9 @@
 {% load i18n %}
-{% load fbc %}
-{% extends "myghtyboard/punbb/body.html" %}
+{% extends "wiki/punbb/body.html" %}
 {% block content %}
 
-<p style="text-align:right;"><a href="/forum/mytopics/{{ profile.username }}/">{% trans "User Topics" %}</a> | <a href="/forum/myptopics/{{ profile.username }}/">{% trans "User Posts" %}</a></p>
+<p style="text-align:right;"><a href="/forum/mytopics/{{ profile.username }}/">{% trans "User Topics" %}</a> | <a href="/forum/myptopics/{{ profile.username }}/">{% trans "User Posts" %}</a></p></div>
+<br />
 <h2><span>{% trans "User Profile" %}</span></h2>
 <div class="blocktable">
 	<div class="box">
