--- a/trunk/diamandas/userpanel/templates/userpanel/punbb/userlist.html
+++ b/trunk/diamandas/userpanel/templates/userpanel/punbb/userlist.html
@@ -1,7 +1,7 @@
 {% load i18n %}
-{% load fbc %}
-{% extends "myghtyboard/punbb/body.html" %}
+{% extends "wiki/punbb/body.html" %}
 {% block content %}
+</div>
 <br />
 <div class="blocktable">
 	<h2><span>{% trans "Users List" %}</span></h2>
