fixed races in captcha images

--- a/trunk/diamandas/userpanel/templates/userpanel/punbb/login.html
+++ b/trunk/diamandas/userpanel/templates/userpanel/punbb/login.html
@@ -46,7 +46,7 @@
 		</div>
 	</td>
 	<td class="tc2">{{ form.imgtext }}
-    {% if form.imgtext.errors %}<br />*** {{ form.imgtext.errors|join:", " }}{% endif %}<br /><img src="/site_media/bg2.jpg" alt="" style="padding:4px;" /></td>
+    {% if form.imgtext.errors %}<br />*** {{ form.imgtext.errors|join:", " }}{% endif %}<br /><img src="/site_media/images/{{ temp }}" alt="" style="padding:4px;" /></td>
 </tr>
 </tbody>
 </table></div></div>
