--- a/trunk/diamandas/myghtyboard/templates/myghtyboard/add_post.html
+++ b/trunk/diamandas/myghtyboard/templates/myghtyboard/add_post.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 {% load fbc %}
-{% extends "rcs/body.html" %}
+{% extends "wiki/body.html" %}
 {% block content %}
 <h2>{% trans "Add Post" %}</h2>
 <form method="post" action=".">
