--- a/trunk/diamandas/myghtyboard/templates/myghtyboard/category_list.html
+++ b/trunk/diamandas/myghtyboard/templates/myghtyboard/category_list.html
@@ -1,5 +1,5 @@
 {% load i18n %}
-{% extends "rcs/body.html" %}
+{% extends "wiki/body.html" %}
 {% block leftmenu %}{% if perms.is_authenticated %}
 <ul>
 <li><a href="/forum/lasttopics/">{% trans "Last Active Topics" %}</a></li>
