--- a/trunk/diamandas/myghtyboard/templates/myghtyboard/post_list.html
+++ b/trunk/diamandas/myghtyboard/templates/myghtyboard/post_list.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 {% load fbc %}
-{% extends "rcs/body.html" %}
+{% extends "wiki/body.html" %}
 {% block title %}{{ forum_name }} - {{ topic }}{% endblock %}
 {% block header %}{{ forum_name }} - {{ topic }}{% endblock %}
 
