--- a/trunk/diamandas/stats/templates/stats/mainpage.html
+++ b/trunk/diamandas/stats/templates/stats/mainpage.html
@@ -1,5 +1,5 @@
 {% load i18n %}
-{% extends "rcs/body.html" %}
+{% extends "wiki/body.html" %}
 {% block content %}
 <h2>{% trans "Site Statistics" %}</h2><br />
 - <a href="/stats/entries/">{% trans "Unique Entries" %}</a><br />
