--- a/trunk/diamandas/userpanel/templates/userpanel/show_profile.html
+++ b/trunk/diamandas/userpanel/templates/userpanel/show_profile.html
@@ -1,5 +1,5 @@
 {% load i18n %}
-{% extends "rcs/body.html" %}
+{% extends "wiki/body.html" %}
 {% block content %}
 <p style="text-align:right;"><a href="/forum/mytopics/{{ profile.username }}/">{% trans "User Topics" %}</a> | <a href="/forum/myptopics/{{ profile.username }}/">{% trans "User Posts" %}</a></p>
 <h2>{% trans "User Profile" %}</h2>
