--- a/trunk/diamandas/wiki/templates/wiki/page_history_list.html
+++ b/trunk/diamandas/wiki/templates/wiki/page_history_list.html
@@ -1,5 +1,5 @@
 {% load i18n %}
-{% extends "wiki/punbb/body.html" %}
+{% extends "wiki/body.html" %}
 {% block content %}
 {% trans "This page shows list of all modifications made to" %} <b>{{page.title}}</b></div><br />
 <form method="post" action="/wiki/diff/">
