--- a/trunk/diamandas/myghtyboard/templates/myghtyboard/mytopics_list.html
+++ b/trunk/diamandas/myghtyboard/templates/myghtyboard/mytopics_list.html
@@ -1,5 +1,5 @@
 {% load i18n %}
-{% extends "rcs/body.html" %}
+{% extends "wiki/body.html" %}
 {% block content %}
 <h2><a href="/forum/">{% trans "Forum Index" %}</a></h2>
 <div class="content">
@@ -15,15 +15,15 @@
             <tr class="{% cycle rowA,rowB %}">
            <td class="first">
 {% if topic.is_locked %}
-	<img src="/site_media/biblioteka/lock.png" alt="*" />
+	<img src="/site_media/static/lock.png" alt="*" />
 {% else %}
 	{% if topic.is_sticky %}
-		<img src="/site_media/biblioteka/stick.png" alt="*" />
+		<img src="/site_media/static/stick.png" alt="*" />
 	{% else %}
 		{% if topic.is_global %}
-			<img src="/site_media/biblioteka/glob.png" alt="*" />
+			<img src="/site_media/static/glob.png" alt="*" />
 		{% else %}
-			<img src="/site_media/biblioteka/normal.png" alt="*" />
+			<img src="/site_media/static/normal.png" alt="*" />
 		{% endif%}
 	{% endif%}
 {% endif %}</td>
