--- a/trunk/diamandas/stats/templates/stats/google.html
+++ b/trunk/diamandas/stats/templates/stats/google.html
@@ -1,5 +1,5 @@
 {% load i18n %}
-{% extends "rcs/body.html" %}
+{% extends "wiki/body.html" %}
 {% block content %}
 <h2>{% trans "Google Keywords" %}</h2><br />
 <b>Wejścia z Google</b>: {{ google }} %<br />
