--- a/trunk/diamandas/tasks/templates/tasks/task_show.html
+++ b/trunk/diamandas/tasks/templates/tasks/task_show.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 {% load fbc %}
-{% extends "rcs/body.html" %}
+{% extends "wiki/body.html" %}
 {% block title %}{{ task.task_name }}{% endblock %}
 {% block header %}
 {{ task.task_name }}
