--- a/trunk/diamandas/userpanel/templates/userpanel/pmessage.html
+++ b/trunk/diamandas/userpanel/templates/userpanel/pmessage.html
@@ -1,5 +1,5 @@
 {% load i18n %}
-{% extends "rcs/body.html" %}
+{% extends "wiki/body.html" %}
 {% block content %}
 <h2>{% trans "Send a Private Message" %}</h2><form action="." method="post">
 <div class="content">
