--- a/trunk/diamandas/userpanel/templates/userpanel/register.html
+++ b/trunk/diamandas/userpanel/templates/userpanel/register.html
@@ -1,5 +1,5 @@
 {% load i18n %}
-{% extends "rcs/body.html" %}
+{% extends "wiki/body.html" %}
 {% block content %}
 <h2>{% trans "Register" %}</h2><form action="." method="post"><input type="hidden" value="{{ hash }}" name="imghash" />
 {% if error %}
