--- a/trunk/diamandas/userpanel/templates/userpanel/userlist.html
+++ b/trunk/diamandas/userpanel/templates/userpanel/userlist.html
@@ -1,5 +1,5 @@
 {% load i18n %}
-{% extends "rcs/body.html" %}
+{% extends "wiki/body.html" %}
 {% block content %}
 <h2>{% trans "Users List" %}</h2>
 <div class="content">
