--- a/trunk/diamandas/wiki/templates/wiki/page.html
+++ b/trunk/diamandas/wiki/templates/wiki/page.html
@@ -1,12 +1,8 @@
 {% load i18n %}
 {% load cbc %}
-{% extends "wiki/punbb/body.html" %}
+{% extends "wiki/body.html" %}
 {% block leftmenu %}
- <a href="/wiki/edit/{{ page.slug }}/">{% trans "Edit" %}</a> | <a href="/wiki/history/{{ page.slug }}/">{% trans "Page History" %}</a> | <a href="/wiki/add/">{% trans "Add a Page" %}</a>
-{% if pdf %}
- | <a href="/wiki/pdf/{{ page.slug }}/">{% trans "Save as PDF" %}</a>
-{% endif %}
- | <a onclick="window.print();">{% trans "Print Page" %}</a>
+<li><a href="/wiki/edit/{{ page.slug }}/">{% trans "Edit" %}</a></li><li><a href="/wiki/history/{{ page.slug }}/">{% trans "Page History" %}</a></li><li><a href="/wiki/add/">{% trans "Add a Page" %}</a></li><li><a onclick="window.print();">{% trans "Print Page" %}</a></li>
 {% endblock %}
 
 {% block header %}
